debugging some errors

--- a/index.html
+++ b/index.html
@@ -51,17 +51,16 @@
         
       </div>
 
-      <button id="dice">
+      <div id="dice">
         <i class="fa-solid fa-dice-five fa-2xl"></i>
-      </button>
+      </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/xiaoyoufung">Xiaoyou Fung</a>.
-    </div>
-
-
+    </footer>
+    
     <script src="index.js"></script>
   </body>
 </html>
