fix bug + change icon size

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -52,7 +53,7 @@
       </div>
 
       <div id="dice">
-        <i class="fa-solid fa-dice-five fa-2xl"></i>
+        <i class="fa-solid fa-dice-five fa-xl"></i>
       </div>
     </main>
 
